solved cors issue?

--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -636,24 +636,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_47840\\403615161.py:5: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
-      "  es.indices.create(index='users', body={\n"
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_19576\\860575664.py:7: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es.indices.create(index='users', body={\n",
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_19576\\860575664.py:20: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  es.indices.create(index='pantry', body={\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'users'})"
+       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'pantry'})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,15 +664,35 @@
     "if es.indices.exists(index='users'):\n",
     "    es.indices.delete(index='users')\n",
     "\n",
-    "# Create a new users index with the specified mapping\n",
+    "if es.indices.exists(index='pantry'):\n",
+    "    es.indices.delete(index='pantry')\n",
+    "\n",
     "es.indices.create(index='users', body={\n",
     "    \"mappings\": {\n",
     "        \"properties\": {\n",
     "            \"username\": {\"type\": \"keyword\"},\n",
     "            \"email\": {\"type\": \"keyword\"},  # Use keyword type for email\n",
+    "            \"user_id\": {\"type\": \"keyword\"},\n",
     "            \"first_name\": {\"type\": \"text\"},\n",
     "            \"last_name\": {\"type\": \"text\"},\n",
     "            \"password\": {\"type\": \"keyword\"}  # Consider using a different type for hashed passwords\n",
+    "        }\n",
+    "    }\n",
+    "})\n",
+    "\n",
+    "es.indices.create(index='pantry', body={\n",
+    "    \"mappings\": {\n",
+    "        \"properties\": {\n",
+    "            \"user_id\": {\"type\": \"keyword\"},\n",
+    "            \"items\": {\n",
+    "                \"type\": \"nested\",\n",
+    "                \"properties\": {\n",
+    "                    \"name\": {\"type\": \"text\"},\n",
+    "                    \"qty\": {\"type\": \"integer\"},\n",
+    "                    \"unit\": {\"type\": \"text\"},\n",
+    "                    \"exp_date\": {\"type\": \"date\"}\n",
+    "                }\n",
+    "            }\n",
     "        }\n",
     "    }\n",
     "})"
@@ -755,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -765,15 +787,17 @@
       "All Users:\n",
       "\n",
       "Username: user1\n",
-      "Email: user1@gmail.com\n",
-      "Name: John Doe\n",
+      "Email: doctor.26@osu.edu\n",
+      "Name: Avery Doctor\n",
       "Password: password@1\n",
+      "User_id: $2b$12$nLPDpL9ynDYzQZxp9uHATeX2ekVWDanKduMOwXW2oX/j1xHJfjyiK\n",
       "--------------------------------------------------\n",
       "\n",
-      "Username: eat\n",
-      "Email: eat@gmail.com\n",
-      "Name: Eat EATS\n",
-      "Password: eat!\n",
+      "Username: user2\n",
+      "Email: doctor.25@osu.edu\n",
+      "Name: Avery Doctor\n",
+      "Password: password2\n",
+      "User_id: $2b$12$9YkOGkkDjm6cBaGnxOyDK.A3hJHJp1d0R4CVvm/bj/l1r9dP67xr2\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -781,7 +805,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_47840\\4152322044.py:4: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_19576\\1199135113.py:4: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  results = es.search(index=\"users\", body={\n"
      ]
     }
@@ -803,6 +827,101 @@
     "        print(f\"Email: {user['email']}\")\n",
     "        print(f\"Name: {user['first_name']} {user['last_name']}\")\n",
     "        print(f\"Password: {user['password']}\")\n",
+    "        print(f\"User_id: {user['user_id']}\")\n",
+    "        print(\"-\" * 50)\n",
+    "except Exception as e:\n",
+    "    print(\"Error querying Elasticsearch:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Users:\n",
+      "\n",
+      "Username: user1\n",
+      "Email: doctor.26@osu.edu\n",
+      "Name: Avery Doctor\n",
+      "Password: password@1\n",
+      "User_id: $2b$12$nLPDpL9ynDYzQZxp9uHATeX2ekVWDanKduMOwXW2oX/j1xHJfjyiK\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_19576\\1448662511.py:2: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  results = es.search(index=\"users\", body={\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    results = es.search(index=\"users\", body={\n",
+    "        \"query\": {\n",
+    "            \"match_all\": {}\n",
+    "        }\n",
+    "    }, size=100)  # Increase size if you have more users\n",
+    "    \n",
+    "    print(\"All Users:\")\n",
+    "    for hit in results[\"hits\"][\"hits\"]:\n",
+    "        user = hit[\"_source\"]\n",
+    "        print(f\"\\nUsername: {user['username']}\")\n",
+    "        print(f\"Email: {user['email']}\")\n",
+    "        print(f\"Name: {user['first_name']} {user['last_name']}\")\n",
+    "        print(f\"Password: {user['password']}\")\n",
+    "        print(f\"User_id: {user['user_id']}\")\n",
+    "        print(\"-\" * 50)\n",
+    "except Exception as e:\n",
+    "    print(\"Error querying Elasticsearch:\", e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All Users:\n",
+      "User_id: $2b$12$9YkOGkkDjm6cBaGnxOyDK.A3hJHJp1d0R4CVvm/bj/l1r9dP67xr2\n",
+      "Items: []\n",
+      "--------------------------------------------------\n",
+      "User_id: $2b$12$nLPDpL9ynDYzQZxp9uHATeX2ekVWDanKduMOwXW2oX/j1xHJfjyiK\n",
+      "Items: [{'name': 'Banana', 'qty': '3', 'unit': 'bunch', 'exp_date': '2025-03-27'}]\n",
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_2976\\3197841827.py:2: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  results = es.search(index=\"pantry\", body={\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    results = es.search(index=\"pantry\", body={\n",
+    "        \"query\": {\n",
+    "            \"match_all\": {}\n",
+    "        }\n",
+    "    }, size=100)  # Increase size if you have more users\n",
+    "    \n",
+    "    print(\"All Users:\")\n",
+    "    for hit in results[\"hits\"][\"hits\"]:\n",
+    "        user = hit[\"_source\"]\n",
+    "        print(f\"User_id: {user['user_id']}\")\n",
+    "        print(f\"Items: {user['items']}\")\n",
     "        print(\"-\" * 50)\n",
     "except Exception as e:\n",
     "    print(\"Error querying Elasticsearch:\", e)"
