created add and remove

--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -893,10 +893,10 @@
      "text": [
       "All Users:\n",
       "User_id: $2b$12$9YkOGkkDjm6cBaGnxOyDK.A3hJHJp1d0R4CVvm/bj/l1r9dP67xr2\n",
-      "Items: []\n",
       "--------------------------------------------------\n",
       "User_id: $2b$12$nLPDpL9ynDYzQZxp9uHATeX2ekVWDanKduMOwXW2oX/j1xHJfjyiK\n",
-      "Items: [{'name': 'Banana', 'qty': '3', 'unit': 'bunch', 'exp_date': '2025-03-27'}]\n",
+      "Item: grapes, Quantity: 2 bag, Expiration Date: 2025-03-27\n",
+      "Item: milk, Quantity: 6 c, Expiration Date: 2025-03-31\n",
       "--------------------------------------------------\n"
      ]
     },
@@ -904,7 +904,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_2976\\3197841827.py:2: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_2976\\4070154351.py:2: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
       "  results = es.search(index=\"pantry\", body={\n"
      ]
     }
@@ -921,7 +921,8 @@
     "    for hit in results[\"hits\"][\"hits\"]:\n",
     "        user = hit[\"_source\"]\n",
     "        print(f\"User_id: {user['user_id']}\")\n",
-    "        print(f\"Items: {user['items']}\")\n",
+    "        for item in user['items']:\n",
+    "            print(f\"Item: {item['name']}, Quantity: {item['qty']} {item['unit']}, Expiration Date: {item['exp_date']}\")\n",
     "        print(\"-\" * 50)\n",
     "except Exception as e:\n",
     "    print(\"Error querying Elasticsearch:\", e)"
