--- a/elastic_connect.ipynb
+++ b/elastic_connect.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from elasticsearch import Elasticsearch\n",
+    "from elasticsearch import Elasticsearch, helpers\n",
     "from elasticsearch.helpers import bulk\n",
     "import os\n",
     "import requests\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,17 +93,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'title': 'Stracciatella (Italian Wedding Soup)', 'ingredients': '3 1/2 c Chicken broth; homemade|1 lb Fresh spinach; wash/trim/chop|1 Egg|1 c Grated parmesan cheese; --or--|1 c Romano cheese; freshly grated|Salt and pepper; to taste', 'servings': '4 servings', 'instructions': 'Bring 1 cup of the broth to a boil. Add spinach and cook until softened but still bright green. Remove spinach with a slotted spoon and set aside. Add remaining broth to pot. Bring to a boil. Meanwhile, beat egg lightly with a fork. Beat in 1/4 cup of cheese. When broth boils pour in egg mixture, stirring constantly for a few seconds until it cooks into \"rags.\" Add reserved spinach, salt and pepper. Serve immediately, passing remaining cheese. NOTES: Someone asked for this recipe a while back. I believe this soup, known as \"Stracciatella\" is synonymous with Italian Wedding Soup, however, I seem to remember from I-don\\'t-know-where that Italian Wedding Soup is the same as this but with the addition of tiny meatballs.'}]\n",
+      "title: Stracciatella (Italian Wedding Soup)\n",
+      "ingredients: 3 1/2 c Chicken broth; homemade|1 lb Fresh spinach; wash/trim/chop|1 Egg|1 c Grated parmesan cheese; --or--|1 c Romano cheese; freshly grated|Salt and pepper; to taste\n",
+      "servings: 4 servings\n",
+      "instructions: Bring 1 cup of the broth to a boil. Add spinach and cook until softened but still bright green. Remove spinach with a slotted spoon and set aside. Add remaining broth to pot. Bring to a boil. Meanwhile, beat egg lightly with a fork. Beat in 1/4 cup of cheese. When broth boils pour in egg mixture, stirring constantly for a few seconds until it cooks into \"rags.\" Add reserved spinach, salt and pepper. Serve immediately, passing remaining cheese. NOTES: Someone asked for this recipe a while back. I believe this soup, known as \"Stracciatella\" is synonymous with Italian Wedding Soup, however, I seem to remember from I-don't-know-where that Italian Wedding Soup is the same as this but with the addition of tiny meatballs.\n"
+     ]
+    }
+   ],
    "source": [
     "# Example: Fetch & Store \"Italian Wedding Soup\"\n",
     "query = \"italian wedding soup\"\n",
     "recipes = fetch_recipes(query)\n",
     "print(recipes)\n",
     "\n",
-    "if recipes:\n",
-    "    store_recipes_in_elasticsearch(recipes)"
+    "recipe = recipes[0]\n",
+    "\n",
+    "for key, value in recipe.items():\n",
+    "    print(f\"{key}: {value}\")"
    ]
   },
   {
@@ -930,10 +944,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_6256\\951451703.py:19: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=index_name, id=recipe_id, body=recipe)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the index name\n",
+    "index_name = \"recipe_box_v2\"\n",
+    "\n",
+    "# Retrieve all documents from the index\n",
+    "def update_keywords():\n",
+    "    # Use the scan helper to retrieve all documents\n",
+    "    all_docs = helpers.scan(es, index=index_name)\n",
+    "\n",
+    "    for doc in all_docs:\n",
+    "        recipe_id = doc['_id']\n",
+    "        recipe = doc['_source']\n",
+    "        \n",
+    "        # Check if 'keyword' exists and is not a list\n",
+    "        if 'keyword' in recipe and not isinstance(recipe['keyword'], list):\n",
+    "            # Create a new list with the current keyword and \"public\"\n",
+    "            recipe['keyword'] = [recipe['keyword'] + \" public\"]\n",
+    "        \n",
+    "        # Update the document in Elasticsearch\n",
+    "        es.index(index=index_name, id=recipe_id, body=recipe)\n",
+    "\n",
+    "# Call the function to update keywords\n",
+    "update_keywords()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 tbsp unsalted butter; softened, 4 tsp capers; drained, 1 small lemon; zested and juiced; divided, 1 lbs asparagus; trimmed, 2 tbsp olive oil, 1 tsp kosher salt; divided, 4 6-ounce skin-on or skinless salmon filets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_6256\\500533414.py:9: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use individual parameters.\n",
+      "  search_response = es.search(index=index_name, body={\n",
+      "C:\\Users\\13307\\AppData\\Local\\Temp\\ipykernel_6256\\500533414.py:26: DeprecationWarning: The 'body' parameter is deprecated and will be removed in a future version. Instead use the 'document' parameter. See https://github.com/elastic/elasticsearch-py/issues/1698 for more information\n",
+      "  es.index(index=index_name, id=search_response['hits']['hits'][0]['_id'], body=recipe)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the index name\n",
+    "index_name = \"recipe_box_v2\"\n",
+    "\n",
+    "index_name = \"recipe_box_v2\"\n",
+    "\n",
+    "# Function to find a recipe by title and extract or update ingredients\n",
+    "def get_ingredients_by_title(title, new_ingredients=None):\n",
+    "    # Search for the recipe with the specified title\n",
+    "    search_response = es.search(index=index_name, body={\n",
+    "        \"query\": {\n",
+    "            \"match\": {\n",
+    "                \"title\": title\n",
+    "            }\n",
+    "        }\n",
+    "    })\n",
+    "\n",
+    "    # Check if any hits were found\n",
+    "    if search_response['hits']['total']['value'] > 0:\n",
+    "        # Extract the first recipe found\n",
+    "        recipe = search_response['hits']['hits'][0]['_source']\n",
+    "        \n",
+    "        # Update ingredients if new_ingredients is provided\n",
+    "        if new_ingredients is not None:\n",
+    "            recipe['ingredients'] = new_ingredients\n",
+    "            # Update the document in Elasticsearch\n",
+    "            es.index(index=index_name, id=search_response['hits']['hits'][0]['_id'], body=recipe)\n",
+    "        \n",
+    "        # Return the ingredients string\n",
+    "        return recipe.get('ingredients', 'Ingredients not found')\n",
+    "    else:\n",
+    "        return 'Recipe not found'\n",
+    "\n",
+    "# Call the function with the specific title and new ingredients\n",
+    "ingredients = get_ingredients_by_title(\"Sheet Pan Salmon With Asparagus\", \"4 tbsp unsalted butter; softened, 4 tsp capers; drained, 1 small lemon; zested and juiced; divided, 1 lbs asparagus; trimmed, 2 tbsp olive oil, 1 tsp kosher salt; divided, 4 6-ounce skin-on or skinless salmon filets\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"4 tbsp unsalted butter; softened, 4 tsp capers; drained, 1  small lemon; zested and juiced; divided, 1 lbs asparagus; trimmed, 2 tbsp olive oil, 1 tsp kosher salt; divided, 4 6-ounce skin-on or skinless salmon filets\""
+   ]
   }
  ],
  "metadata": {
